--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,338 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/expressionInput"
+        android:layout_width="411dp"
+        android:layout_height="200dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/expressionOutput"
+        android:layout_width="411dp"
+        android:layout_height="50dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expressionInput" />
+
+    <Button
+        android:id="@+id/operatorEqual"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/symbolEqual"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/operatorMinus"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit0"
+        app:layout_constraintTop_toBottomOf="@+id/digit3"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/symbolDot"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/symbolDot"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/digit0"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/digit1"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit7"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit7"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit4"
+        app:layout_constraintEnd_toStartOf="@+id/digit8"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expressionOutput"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit5"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit5"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit2"
+        app:layout_constraintEnd_toStartOf="@+id/digit6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit4"
+        app:layout_constraintTop_toBottomOf="@+id/digit8"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit6"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit6"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit3"
+        app:layout_constraintEnd_toStartOf="@+id/operatorDiv"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit5"
+        app:layout_constraintTop_toBottomOf="@+id/digit9"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit8"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit8"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit5"
+        app:layout_constraintEnd_toStartOf="@+id/digit9"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit7"
+        app:layout_constraintTop_toBottomOf="@+id/expressionOutput"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit9"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit9"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit6"
+        app:layout_constraintEnd_toStartOf="@+id/operatorDiv"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit8"
+        app:layout_constraintTop_toBottomOf="@+id/expressionOutput"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit0"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit0"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/operatorEqual"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/symbolDot"
+        app:layout_constraintTop_toBottomOf="@+id/digit2"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit1"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit1"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/symbolDot"
+        app:layout_constraintEnd_toStartOf="@+id/digit2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/digit4"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit2"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit2"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit0"
+        app:layout_constraintEnd_toStartOf="@+id/digit3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit1"
+        app:layout_constraintTop_toBottomOf="@+id/digit5"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit3"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit3"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/operatorEqual"
+        app:layout_constraintEnd_toStartOf="@+id/operatorMinus"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit2"
+        app:layout_constraintTop_toBottomOf="@+id/digit6"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/digit4"
+        android:layout_width="102dp"
+        android:layout_height="120dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/digit4"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:backgroundTint="#FFFFFF"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/digit1"
+        app:layout_constraintEnd_toStartOf="@+id/digit5"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/digit7"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/operatorDiv"
+        android:layout_width="102dp"
+        android:layout_height="95dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/symbolDiv"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/operatorMult"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit6"
+        app:layout_constraintTop_toBottomOf="@+id/delete"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/operatorMinus"
+        android:layout_width="102dp"
+        android:layout_height="95dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/symbolMinus"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/operatorPlus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/operatorEqual"
+        app:layout_constraintTop_toBottomOf="@+id/operatorMult"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="102dp"
+        android:layout_height="95dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/del"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/operatorDiv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit9"
+        app:layout_constraintTop_toBottomOf="@+id/expressionOutput"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/operatorPlus"
+        android:layout_width="102dp"
+        android:layout_height="95dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/symbolPlus"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/operatorEqual"
+        app:layout_constraintTop_toBottomOf="@+id/operatorMinus"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
+
+    <Button
+        android:id="@+id/operatorMult"
+        android:layout_width="102dp"
+        android:layout_height="95dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/symbolStar"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/operatorMinus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/digit6"
+        app:layout_constraintTop_toBottomOf="@+id/operatorDiv"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
