--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,32 @@
 
     <TextView
         android:id="@+id/expressionInput"
-        android:layout_width="411dp"
-        android:layout_height="200dp"
-        android:textSize="24sp"
+        android:layout_width="0dp"
+        android:layout_height="175dp"
+        android:enabled="true"
+        android:focusable="true"
+        android:gravity="fill_vertical|end"
+        android:hint="@string/digit0"
+        android:longClickable="true"
+        android:textIsSelectable="true"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/expressionOutput"
-        android:layout_width="411dp"
-        android:layout_height="50dp"
-        android:textSize="24sp"
+        android:layout_width="0dp"
+        android:layout_height="75dp"
+        android:enabled="true"
+        android:focusable="true"
+        android:gravity="end"
+        android:hint="@string/digit0"
+        android:longClickable="true"
+        android:textIsSelectable="true"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expressionInput" />
 
     <Button
@@ -29,6 +42,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onEqualButtonClick"
         android:text="@string/symbolEqual"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -48,6 +62,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDotButtonClick"
         android:text="@string/symbolDot"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -67,6 +82,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit7"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -86,6 +102,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit5"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -105,6 +122,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit6"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -122,8 +140,10 @@
         android:id="@+id/digit8"
         android:layout_width="102dp"
         android:layout_height="120dp"
+        android:layout_marginTop="1dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit8"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -141,8 +161,10 @@
         android:id="@+id/digit9"
         android:layout_width="102dp"
         android:layout_height="120dp"
+        android:layout_marginTop="1dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit9"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -162,6 +184,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit0"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -181,6 +204,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit1"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -200,6 +224,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit2"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -219,6 +244,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit3"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -238,6 +264,7 @@
         android:layout_height="120dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDigitButtonClick"
         android:text="@string/digit4"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -257,6 +284,7 @@
         android:layout_height="95dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onOperatorButtonClick"
         android:text="@string/symbolDiv"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -275,6 +303,7 @@
         android:layout_height="95dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onOperatorButtonClick"
         android:text="@string/symbolMinus"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -293,6 +322,7 @@
         android:layout_height="95dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onDeleteButtonClick"
         android:text="@string/del"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -311,6 +341,7 @@
         android:layout_height="95dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onOperatorButtonClick"
         android:text="@string/symbolPlus"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -329,6 +360,7 @@
         android:layout_height="95dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onOperatorButtonClick"
         android:text="@string/symbolStar"
         android:textColor="#000000"
         android:textSize="30sp"
